# DataCanvas

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  docker-run.sh  pyproject.toml  setup.py
assets/: datacanvas.xbm  test.json  test.out
assets/theme/: light.tcl
datacanvas/: __main__.py  app.py  gui.py  utils.py
datacanvas/theme/: dark.tcl  datacanvas.icns  sun-valley.tcl
tests/: test_datacanvas.py
