[tool.poetry]
name = "datacanvas"
version = "0.1.0"
description = "DataCanvas app template."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "datacanvas"}]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.2"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
datacanvas = "datacanvas.app:main"