[tool.poetry]
name = "datacanvas"
version = "0.1.0"
description = "DataCanvas app template."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
datacanvas = "datacanvas.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"